--- a/article/inputs/macros.sty
+++ b/article/inputs/macros.sty
@@ -7,6 +7,7 @@
 \newcommand{\bs}{\ensuremath{\mathbf{s}}}
 \newcommand{\bG}{\ensuremath{\mathbf{G}}}
 \newcommand{\bX}{\ensuremath{\mathbf{X}}}
+\newcommand{\bM}{\ensuremath{\mathbf{M}}}
 
 \newcommand{\sL}{\ensuremath{\mathscr{L}}}
 \newcommand{\sK}{\ensuremath{\mathscr{K}}}
