Fixed (B') as suggested by William.

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -1667,7 +1667,7 @@ Let (B$'$) and (B$''$) be the conditions related to (B) found in McKenzie's
 paper~\cite{McKenzie1983}:
 \begin{enumerate}
 \item[(B$'$)]
-If $\varphi: L \to L$ is meet-preserving and $\varphi(x) > x$ for
+If $\varphi: L \to L$ is any meet-preserving map such that $\varphi(x) > x$ for
 $x\ne 1$, then $\varphi(x) = 1$ for all~$x$.
 \item[(B$''$)]
 The coatoms of $\bL$ meet to $0$.
