improved (hopefully) notation on page 4 and fixed reference to alvin

--- a/article/inputs/macros.sty
+++ b/article/inputs/macros.sty
@@ -81,3 +81,10 @@
 
 
 \tikzstyle{lat} = [circle,draw,inner sep=.8pt]
+
+%% wjd: should we use bold for tuples?
+\newcommand{\bx}{\ensuremath{\mathbf{x}}}
+\newcommand{\by}{\ensuremath{\mathbf{y}}}
+
+%% wjd: can we use n underbar for the set {0,1,...,n-1}?
+\newcommand{\nn}{\ensuremath{\underline{n}}}
