--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -333,7 +333,7 @@ MRREVIEWER = {Andrea Lucchini},
 
 %%///////////////////////////////////////////////////////////////////////////////////
 %% Extra macros
-\input{inputs/macros.sty}
+\usepackage{inputs/macros}
 
 %%///////////////////////////////////////////////////////////////////////////////////
 %% tikz notes:
@@ -598,7 +598,7 @@ algebras is closed under the following operations:
   \end{figure}
 \end{center}
 
-\begin{remarks}
+\begin{remarks}\
   \begin{enumerate}[a.]
   \item 
   The first item in the list above says that if $L$ is representable then so is
@@ -666,70 +666,93 @@ in the group $G$.  The identity of the group $G^X$ is of course the constant map
 
 Let $X$ be a finite totally ordered set, with order relation $\leq$,
 and consider the set $X^X$ of functions mapping $X$ into itself.  
-The subset of $X^X$ consisting of functions that are both idempotent and
-decreasing in the sense $f(x) \leq x$
-%\footnote{When we say that the map $f$ is ``decreasing'' we mean
-%  $f(x)\leq x$ for all $x$. (We do not mean $x\leq y$ implies $f(y) \leq f(x)$.)}
+The subset of $X^X$ consisting of functions that are idempotent and
+satisfy %% decreasing in the sense 
+$f(x) \leq x$ for all $x\in X$
 will be denoted by $\ID{X}$.  That is,
 \[
 \ID{X} = \{f\in X^X \mid f^2 = f \text{ and }\; \forall x\; f(x) \leq x\}.
 \]
-Define a partial order $\sqsubseteq$ on the set $\ID{X}$ by
+Define the binary relation $\sqsubseteq$ on the set $\ID{X}$ by
 \begin{equation}
   \label{eq:MID111}
   f\sqsubseteq g \quad \Leftrightarrow \quad \ker f \leq \ker g,
 \end{equation}
-where of course $\ker f = \{(x,y) \mid f(x) = f(y)\}$.
-It is easy to see that $f\sqsubseteq g$ holds if and only if $gf = g$.  
-Moreover, under this partial ordering $\ID{X}$ is a lattice which is 
-isomorphic to $\bEqX$ (viz.~the map $\Theta : \EqX \rightarrow
-\ID{X}$ given by $\Theta(\alpha) = f_\alpha$, where
-$f_\alpha(x) = \min\{y\in X \mid (x,y)\in \alpha\}$.) % = \min x/\alpha.
+where $\ker f = \{(x,y) \in X^2 \mid f(x) = f(y)\}$.
+It is easy to see that $f\sqsubseteq g$ holds if and only if $gf = g$, and that
+$\sqsubseteq$ is a partial ordering of $\ID{X}$.  
+In fact, under this ordering, $\ID{X}$ is a lattice which is 
+isomorphic to $\bEqX$. The lattice isomorphism is the map
+$\Theta : \EqX \rightarrow \ID{X}$ given by
+$\Theta(\alpha) = f_\alpha$, where
+$f_\alpha(x) = \min\{y\in X \mid x \mathrel{\alpha} y\}$.
 
 
-Suppose $S$ is a finite nonabelian simple
-group, and consider $S^n$, the direct power of $n$ copies of $S$.
-An element of $S^n$ may be viewed as a map from the set 
-$n = \{0, 1, \dots, n-1\}$ into $S$.  Thus, if 
-$x = (x_0, x_1, \dots, x_{n-1})\in S^n$, then by 
-$\ker x$ we mean the relation $(i,j) \in \ker x$ if and only if $x_i = x_j$.
-The set of constant maps is a subgroup $D < S^n$, sometimes called the
+
+Suppose $S$ is a finite nonabelian simple group, and consider the direct power $S^n$.
+An element of $S^n$ may be viewed either as a function, $\bx : \nn \to S$,
+from the set $\nn = \{0, 1, \dots, n-1\}$ to $S$, or as the tuple 
+of its values, that is,
+%
+%% wjd: for the symbol denoting a tuple (x(0), x(1), ...), should we simply use
+%% $x = (x(0), x(1),...)$ or should we use bold x? (currently using bold)
+%
+    $\bx = (x(0), x(1), \dots, x(n-1))$.
+%
+As a function, $\bx$ has kernel
+\[
+\ker \bx = \{(i,j) \in \nn^2 \mid x(i) = x(j)\}.
+\]
+The set of constant functions in $S^n$ is a subgroup $D < S^n$, sometimes called the
 \defn{diagonal subgroup}; that is,
-$D = \{(s, s, \dots, s) \mid s\in S\} \leq S^n$.
-
+\[
+D = \{(s, s, \dots, s) \mid s\in S\} \leq S^n.
+\]
 For each $f \in \ID{n}$, define
 \[
-K_f = \{(x_{f(0)}, x_{f(1)}, \dots, x_{f(n-1)}) \mid x_{f(i)}\in S, \; i = 0, 1,
-\dots, n-1\}.
+%%
+%% K_f = \{(x_{f(0)}, x_{f(1)}, \dots, x_{f(n-1)}) \mid x_{f(i)}\in S, \; i = 0, 1,\dots, n-1\}.
+%% wjd: Why not call this S^n f?  Or simply Xf?  I don't remember my original
+%%      motivation for calling it K_f.  I'm changing it.
+%%      Complaints? (feel free to change it back or open an issue)
+Xf = \{\bx f \mid \bx \in S^n\} =
+\{(xf(0), xf(1), \dots, xf(n-1)) \mid \bx \in S^n\}.
 \]
-Then $D \leq K_f\leq S^n$, and $K_f$ is the set of maps
-$K_f = \{x f \in S^n \mid x \in S^n \}$; i.e., compositions of the given
-map $f\in n^n$, followed by  any $x\in S^n$.  Thus, 
-$K_f = \{ y\in S^n \mid \ker f \leq \ker y \}$.
+That is, $Xf$ is the set of all compositions of
+$f$ followed by $\bx\in S^n$.
+Thus, $Xf = \{ \by\in S^n \mid \ker f \leq \ker \by \}$.
 For example, 
-if $f = (0, 0, 2, 3, 2)\in \ID{5}$, then 
-$\ker f = |0,1|2,4|3|$ and 
-$K_f$ is the subgroup %$\Delta \leq K_f \leq S^5$ 
-of all $(y_0, y_1, \dots, y_4)\in S^5$ having $y_0 = y_1$ and $y_2 = y_4$. That is,
-$K_f = \{(x_{0}, x_{0}, x_2, x_3, x_2) \mid x\in S^5\}$.
+if $f = (0, 0, 2, 3, 2)\in \ID{\underline{5}}$, then 
+$\ker f$ is the equivalence relation corresponding to
+the partition $|0,1|2,4|3|$, and 
+$Xf$ is the subgroup of all
+$\by = (y(0), y(1), y(2), y(3), y(4))\in S^5$ satisfying $y(0) = y(1)$ and
+$y(2) = y(4)$. That is,
+%% \begin{align*}
+%% Xf &= \{\bx f \mid \bx\in S^5\} = \{(x(0), x(0), x(2), x(3), x(2)) \mid \bx\in S^5\}\\
+%% &=\{\bx\in S^5 \mid \ker f \leq \ker \bx\}.
+%% \end{align*}
+\[Xf = \{(x(0), x(0), x(2), x(3), x(2)) \mid \bx\in S^5\}
+=\{\by\in S^5 \mid \ker f \leq \ker \by\}.\]
+It's not hard to see that $D \leq Xf\leq S^n$, for all $f\in \ID{n}$.
 
 \begin{lemma}
   \label{lem:latt-duals}
-  The map $f \mapsto K_f$ is a dual lattice isomorphism from $\bEq(n)$ onto the
+  The map $f \mapsto Xf$ is a dual lattice isomorphism from $\bEq(n)$ onto the
   interval sublattice $\lb D, S^n\rb \leq \Sub(S^n)$.
 \end{lemma}
 \begin{proof}
   This is clear since $\ID{n}$ is ordered by (\ref{eq:MID111}), and 
   we have 
   $f\sqsubseteq h$ if and only if
-  $K_h = \{y \in S^n \mid \ker h \leq \ker y \}
-  \leq \{y \in S^n \mid \ker f \leq \ker y \} =  K_f$.
+  $Xh = \{\by \in S^n \mid \ker h \leq \ker \by \}
+  \leq \{\by \in S^n \mid \ker f \leq \ker \by \} =  Xf$.
 \end{proof}
 
-\begin{theorem}[Kurzweil~\cite{Kurzweil:1985}, Netter~\cite{Netter:1986}]
+\begin{theorem}[Kurzweil~\cite{Kurzweil:1985}, Netter~\cite{Netter:1986}]\
   \label{thm:duals-interv-subl}
-  If the finite lattice $L$ is representable (as the congruence lattice of a
-  finite algebra), then so is the dual lattice $L'$.
+  If the finite lattice $L$ is representable as the congruence lattice of a
+  finite algebra, then so is the dual lattice $L'$.
 \end{theorem}
 \begin{proof}
   Without loss of generality, we assume that $L$ is represented
@@ -738,28 +761,30 @@ $K_f = \{(x_{0}, x_{0}, x_2, x_3, x_2) \mid x\in S^5\}$.
   that $F$ consists of unary operations: $F \subseteq n^n$.  
   As above, let $S$ be a nonabelian simple group
   and let $D$ be the diagonal subgroup of $S^n$.
-  Then the unary algebra $\<S^n/D, S^n\>$  is a transitive $S^n$-set which (by
-  Theorem~\ref{thm:g-set-isomorphism2} below) has congruence lattice isomorphic
-  to the interval $\lb D, S^n\rb$.  By Lemma~\ref{lem:latt-duals}, this is the dual
+  Then the unary algebra $\<S^n/D, S^n\>$  is a transitive $S^n$-set which
+  has congruence lattice isomorphic to the interval $\lb D, S^n\rb$.
+  (See, for example,~\cite[Lemma~4.20]{alvi:1987}.)
+  By Lemma~\ref{lem:latt-duals}, this is the dual
   of the lattice $\bEq(n)$.  That is, 
   $\Con \<S^n/D, S^n\> \cong (\bEq(n))'$.
-
-  \todo{Replace the reference to Theorem~\ref{thm:g-set-isomorphism2} with a
-    reference to the appropriate theorem in ALVIN, since the section containing
-    Theorem~\ref{thm:g-set-isomorphism2} below will be deleted.}
-
   
   Now, each operation $\phi \in F$ gives rise to an operation on $S^n$
   by composition:
   \[
-  \hat{\phi}(\bs) = \hat{\phi}(s_{0}, s_1  \dots, s_{n-1}) = (s_{\phi(0)},
-  s_{\phi(1)}\dots, s_{\phi(n-1)}). 
+  \hat{\phi}(\bx) =  \bx \phi = %\hat{\phi}(x(0), x(1)  \dots, x(n-1)) =
+  (x(\phi(0)), x(\phi(1)),\dots, x(\phi(n-1))). 
   \]
-  Thus, $\phi$ induces  an operation on $S^n/D$ since, for 
-  $\bd = (d, d, \dots, d) \in D$ and $\bs \in S^n$ we have 
-  $\bs \bd = (s_{0}d, s_{1}d, \dots , s_{n-1}d)$ and 
-  $\hat{\phi}(\bs \bd) = (s_{\phi(0)}d, s_{\phi(1)}d, \dots , s_{\phi(n-1)}d) = \hat{\phi}(\bs) \bd$,
-  so $\hat{\phi}(\bs D)  = \hat{\phi}(\bs) D$.  Finally, add the set of operations 
+  Thus, $\phi$ induces an operation on $S^n/D$ since, for 
+  $\bd = (s, s, \dots, s) \in D$ and for $\bx \in S^n$, we have
+  %$(\bx \bd)(i) = x(i)d(i) = x(i)s$, so
+  \begin{align*}
+  \bx \bd &= (x(0)d(0), x(1)d(1), \dots , x(n-1)d(n-1))\\
+  &= (x(0)s, x(1)s, \dots , x(n-1)s).
+  \end{align*}
+  Therefore,
+  \[\hat{\phi}(\bx \bd) =(x (\phi(0)) s, x(\phi(1))s, \dots , x(\phi(n-1))s)=
+  \hat{\phi}(\bx) \bd,\]
+  so $\hat{\phi}(\bx D)  = \hat{\phi}(\bx) D$.  Finally, add the set of operations 
   $\hat{F} = \{\hat{\phi} \mid \phi \in F\}$ to $\<S^n/D, S^n\>$, yielding the
   new algebra  $\<S^n/D, S^n \cup \hat{F}\>$, and observe
   that a congruence $\theta \in \Con\<S^n/D, S^n\>$ remains a congruence of
@@ -775,16 +800,16 @@ $K_f = \{(x_{0}, x_{0}, x_2, x_3, x_2) \mid x\in S^5\}$.
 %% $\theta \in \Con \< S^{n}/D, S^{n}\> \cong [D, S^n]$.  Then\footnote{This,
 %%   and more generally the isomorphism $\Con \< S^{n}/D, S^{n}\> \cong [D, S^n]$
 %%   follows from Theorem~\ref{thm:g-set-isomorphism2} below.} there corresponds a
-%% subgroup $D \leq K_f \leq S^n$ such that 
-%% $(x,y)\in \theta$ iff $x^{-1}y = z\in K_f$.  Now if $\hat{\phi}\in \hat{F}$, then
+%% subgroup $D \leq Xf \leq S^n$ such that 
+%% $(x,y)\in \theta$ iff $x^{-1}y = z\in Xf$.  Now if $\hat{\phi}\in \hat{F}$, then
 %% $(\hat{\phi}x, \hat{\phi}y) \in \theta$ iff 
 %% \[
 %% (x_{\phi(0)}^{-1}y_{\phi(0)}, \dots,  x_{\phi(n-1)}^{-1} y_{\phi(n-1)}) =
-%% (z_{\phi(0)},z_{\phi(1)},\dots, z_{\phi(n-1)})\in K_f.
+%% (z_{\phi(0)},z_{\phi(1)},\dots, z_{\phi(n-1)})\in Xf.
 %% \]
-%% Better: Take $z\in K_f$ with $\ker z = \ker f$, so $f(i)=f(j)$ iff $z_i = z_j$.
+%% Better: Take $z\in Xf$ with $\ker z = \ker f$, so $f(i)=f(j)$ iff $z_i = z_j$.
 %% Now suppose $\phi\in F$ does not respect $\ker f$, so there exists $(i,j) \in
-%% \ker f$ such that $(\phi(i), \phi(j)) \notin \ker f$.  Then $\phi z \notin K_f$,
+%% \ker f$ such that $(\phi(i), \phi(j)) \notin \ker f$.  Then $\phi z \notin Xf$,
 %% since $z_{\phi(i)} \neq z_{\phi(j)}$.
 
 \subsection{Union of a filter and ideal}
